# Cut-Video-Into-Images

./: CMakeLists.txt  README - 中文.md  README.md
Test_Videos/: Black_Magic_V1_2.avi  PETS2006.avi  video_list.txt
src/: CutVideoIntoImages.cpp  CutVideoIntoImages.h  main.cpp  qsDirFun.cpp  qsDirFun.h  qsStringFun.cpp  qsStringFun.h
